@@ -2,6 +2,7 @@ Version 1.3.4
  Added:
   - Add WINE env var to console environment [BUG-91];
  Fixed:
+  - Icons are not loaded properly with Qt 5.7.x;
   - Console launch environment uses dead setting fields [BUG-90];
   - Q4Wine file selectors filters files with upper case extension [BUG-94][QTBUG-51712];
   - Refactor winetrkics parser: use direct parser + transactions;
